<resources>
    <string name="app_name">TomatoController</string>
    <string name="sensor_feed_label">Sensor Feed</string>
    <string name="control_settings_label">Control Settings</string>
    <string name="current_ph_label">Current pH</string>
    <string name="current_temp_label">Current °C</string>
    <string name="desired_temp_label">Desired °C</string>
    <string name="desired_ph_label">Desired pH</string>
    <string name="current_light_label">Current Light</string>
    <string name="desired_light_label">Desired Light</string>
    <string name="control_temp_label">Allow Temperature Control</string>
    <string name="control_ph_label">Allow pH Control</string>
    <string name="control_light_label">Allow Light Control</string>
    <string name="auto_temp_control_label">Automatic Temperature Control</string>
    <string name="auto_ph_control_label">Automatic pH Control</string>
    <string name="auto_light_control_label">Automatic Light Control</string>
    <string name="confirm_label">Apply</string>
    <string name="desired_temp_key">.desired_temp</string>
    <string name="desired_ph_key">.desired_ph</string>
    <string name="desired_light_key">.desired_light</string>
    <string name="control_temp_key">.allow_temp_control</string>
    <string name="control_ph_key">.allow_ph_control</string>
    <string name="control_light_key">.allow_light_control</string>
    <string name="min_x_label">Min X:</string>
    <string name="max_x_label">Max X:</string>
    <string name="min_y_label">Min Y:</string>
    <string name="max_y_label">Max Y:</string>
    <string name="change_password_label">Change Password</string>
</resources>
